# ChangeLog for app-misc/calculate-install-gui
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*calculate-install-gui-2.2.0.0_p20100830-r1 (01 Sep 2010)

  01 Sep 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -calculate-install-gui-2.2.0.0_p20100830.ebuild,
  +calculate-install-gui-2.2.0.0_p20100830-r1.ebuild:
  Add work this ebuild with calculate-install from 01 sep.

*calculate-install-gui-2.2.0.0_p20100830 (30 Aug 2010)

  30 Aug 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -calculate-install-gui-2.2.0.0_p20100826-r2.ebuild,
  +calculate-install-gui-2.2.0.0_p20100830.ebuild:
  Daily update.

*calculate-install-gui-2.2.0.0_p20100826 (26 Aug 2010)

  26 Aug 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -calculate-install-gui-2.2.0.0_p20100825-r1.ebuild,
  +calculate-install-gui-2.2.0.0_p20100826.ebuild:
  Daily update.

*calculate-install-gui-2.2.0.0_p20100825 (25 Aug 2010)

  25 Aug 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -calculate-install-gui-2.2.0.0_p20100823.ebuild,
  +calculate-install-gui-2.2.0.0_p20100825.ebuild:
  Daily update.

*calculate-install-gui-2.2.0.0_p20100823 (24 Aug 2010)

  24 Aug 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-install-gui-2.2.0.0_p20100823.ebuild:
  Daily update.

  22 Jun 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  calculate-install-gui-2.2.9999.ebuild:
  Fix directory for compiling.

  28 May 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  calculate-install-gui-2.2.9999.ebuild:
  Add depent of sys-apps/parted.

  27 May 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  calculate-install-gui-2.2.9999.ebuild:
  Add qtermwidget to dependence.

*calculate-install-gui-2.2.9999 (25 May 2010)

  25 May 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-install-gui-2.2.9999.ebuild, +metadata.xml:
  Add live ebuild for calculate-install-gui

  04 May 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>