@@ -1,4 +1,4 @@
-EBUILD calculate-install-gui-2.2.0.0_p20100830-r1.ebuild 800 RMD160 6d90ccad46ae29ae91a49289202d93bf675e4c26 SHA1 c164e768914b24ff8119ed30609bb8ccd54d596d SHA256 8773d079f80343b5b37ade08527a59b2aad1215f0049e30a9343dd139d81ee09
+EBUILD calculate-install-gui-2.2.0.0_p20100830-r2.ebuild 746 RMD160 6cbbe332bc4586287bbb6a6bab039e87bb5d3b91 SHA1 73f06804559ad371a4ad16b9f45115736b71bbbb SHA256 85543d9c00b70a4eface89892b3c8df8b732046014fcf6398ddff20cd0e31cb5
 EBUILD calculate-install-gui-2.2.9999.ebuild 700 RMD160 523695d636602b4c39ded773b5b28e70d169866b SHA1 31b061fd8d18bd72b0532a0da34ed516360efda5 SHA256 ec0e5c94233f4bc20aa839892d619625d560e51772f89e55a1d4c7d56501aa7a
-MISC ChangeLog 2204 RMD160 50ea25d3b2553bcbfad41cf067118442e275a49f SHA1 f19028228b02df58d483f8c435d7aa89b81f1d6c SHA256 fd28b661fa13a7249c32129ec834b59532ab85abefd44a8880bf69b350af9d7c
+MISC ChangeLog 2450 RMD160 e1a42e46b22f0474ebaa0b61a06584bdbe02ecb3 SHA1 9177dac5f5f6189b172fed331cf417ab6dbba81f SHA256 eae5a4d92c4e2ffbe3623ef7ba010e98324b844372ee62922d0c8b7d3dd2ea62
 MISC metadata.xml 319 RMD160 c12d856d94a4bbba48275f44c4e9a0eae1ac6f21 SHA1 cddfe781ee5b88c7f5c94d7c5f03a07e61ae3336 SHA256 2a18634b4a257808c269e8c986462b316780c4f8b9a19c7c8b733fa3310a4147
