@@ -6,13 +6,13 @@
 ~media-gfx/cld-themes-10.9 amd64 x86
 
 ~sys-apps/calculate-1.4.0_p20100826 amd64 x86
-~sys-apps/calculate-install-2.2.0.0_p20100826 amd64 x86
+#~sys-apps/calculate-install-2.2.0.0_p20100826 amd64 x86
 ~app-misc/calculate-install-gui-2.2.0.0_p20100830 amd64 x86
 ~sys-apps/calculate-client-2.2.0.0_p20100825 amd64 x86
 ~sys-apps/calculate-desktop-2.2.0.0_p20100819 amd64 x86
 ~sys-apps/calculate-lib-2.2.0.0_p20100826 amd64 x86
 ~sys-apps/calculate-templates-2.2.0.0_p20100826 amd64 x86
-~sys-apps/calculate-install-2.2.0.0_p20100901 amd64 x86
+~sys-apps/calculate-install-2.2.0.0_p20100902 amd64 x86
 ~sys-apps/calculate-client-2.2.0.0_p20100901 amd64 x86
 ~sys-apps/calculate-desktop-2.2.0.0_p20100901 amd64 x86
 ~sys-apps/calculate-lib-2.2.0.0_p20100901 amd64 x86
