@@ -1,9 +1,9 @@
 ~app-misc/css-meta-10.8.81 amd64 x86
 
 ~sys-apps/calculate-1.4.0_p20100826 amd64 x86
-~sys-apps/calculate-install-2.2.0.0_p20100826 amd64 x86
+#~sys-apps/calculate-install-2.2.0.0_p20100826 amd64 x86
 ~sys-apps/calculate-lib-2.2.0.0_p20100826 amd64 x86
 ~sys-apps/calculate-templates-2.2.0.0_p20100826 amd64 x86
-~sys-apps/calculate-install-2.2.0.0_p20100901 amd64 x86
+~sys-apps/calculate-install-2.2.0.0_p20100902 amd64 x86
 ~sys-apps/calculate-lib-2.2.0.0_p20100901 amd64 x86
 ~sys-apps/calculate-templates-2.2.0.0_p20100901 amd64 x86
