@@ -2,6 +2,14 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*calculate-install-2.2.0.0_p20100902 (02 Sep 2010)
+
+  02 Sep 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  -calculate-install-2.2.0.0_p20100826-r3.ebuild,
+  -calculate-install-2.2.0.0_p20100901.ebuild,
+  +calculate-install-2.2.0.0_p20100902.ebuild:
+  Daily update. In calculate-install fixed initrd optimization.
+
 *calculate-install-2.2.0.0_p20100901 (01 Sep 2010)
 *calculate-install-2.2.0.0_p20100826-r3 (01 Sep 2010)
 
