@@ -2,6 +2,13 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*calculate-install-gui-2.2.0.0_p20100830-r2 (02 Sep 2010)
+
+  02 Sep 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  -calculate-install-gui-2.2.0.0_p20100830-r1.ebuild,
+  +calculate-install-gui-2.2.0.0_p20100830-r2.ebuild:
+  Change depends.
+
 *calculate-install-gui-2.2.0.0_p20100830-r1 (01 Sep 2010)
 
   01 Sep 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
